# AI-EXPRESS

./: CMakeLists.txt  README.md  build.sh  deploy.sh  deploy_ut.sh  run.sh  run_ut.sh  start_nginx.sh
source/common/viowrapper/: CMakeLists.txt  README.md  build.gradle  build.properties  build.properties.local.x2  build.properties.local.x3  deploy.sh  run.sh
source/common/viowrapper/cmake/: hobot_util.cmake
source/common/viowrapper/config/: hb_x2dev.json
source/common/viowrapper/config/x3dev/: hb_vio_x3_1080.json
source/common/viowrapper/data/: image.list
source/common/viowrapper/gradle/wrapper/: gradle-wrapper.properties
source/common/viowrapper/include/: vio_debug.h  vio_wrapper.h  vio_wrapper_global.h
source/common/viowrapper/src/: vio_wrapper.cpp  vio_wrapper_global.cpp
source/common/viowrapper/test/: CMakeLists.txt  vio_wrapper_test.cpp
source/common/xproto/framework/: CMakeLists.txt  Doxyfile  README.md
source/common/xproto/framework/sample/: CMakeLists.txt  sample_plugin.cpp
source/common/xproto/framework/test/: CMakeLists.txt  gtest_main.cc  test_api.cpp  test_xplugin.cpp
source/common/xproto/msgtype/: CMakeLists.txt  Doxyfile
source/common/xproto/plugins/hbipcplugin/: CMakeLists.txt  README.md
source/common/xproto/plugins/smartplugin/: CMakeLists.txt
source/common/xproto/plugins/uvcplugin/: CMakeLists.txt  README.md
source/common/xproto/plugins/vioplugin/: CMakeLists.txt
source/common/xproto/plugins/visualplugin/: CMakeLists.txt
source/common/xproto/plugins/websocketplugin/: CMakeLists.txt
source/common/xproto/python_api/: CMakeLists.txt
source/common/xproto/python_api/include/: base_data_warp.h  smart_helper.h
source/common/xproto/python_api/src/: smart_helper.cpp  wrapper.cpp
source/common/xstream/framework/: CMakeLists.txt  Doxyfile
source/common/xstream/framework/config/: filter_2.json
source/common/xstream/framework/src/: method.cpp  method_manager.cpp  node.cpp  profiler.cpp  scheduler.cpp  thread_pool.cpp  xstream.cpp  xstream_c_api.cpp  xstream_capi.cpp  xstream_capi_type.cpp  xstream_config.cpp  xstream_data.cpp
source/common/xstream/framework/test/: CMakeLists.txt  config_test.cpp  cpp_api_test.cc  gtest_main_withconf.cc  method_cb.cpp  method_factory.cpp  method_init_test.cpp  multisource_test.cpp  node_test.cpp  subworkflow_test.cpp  thread_model.cpp  thread_order.cpp  thread_priority_test.cpp  thread_safe.cpp  timer_test.cpp  xstream_test.cpp
source/common/xstream/imagetools/: CMakeLists.txt  Doxyfile  README.md
source/common/xstream/imagetools/example/: CMakeLists.txt
source/common/xstream/imagetools/src/: image_tools.cpp
source/common/xstream/imagetools/test/: CMakeLists.txt  test_convert_from_bgr.cpp  test_crop_with_pad.cpp  test_cropper.cpp  test_decoder.cpp  test_padding.cpp  test_resizer.cpp  test_rotater.cpp
source/common/xstream/media_codec/: CMakeLists.txt  run.sh
source/common/xstream/media_codec/data/: input_nv12_1080p.yuv  input_yuv420p_1080p.yuv  input_yuv422p_1080p.yuv  input_yuyv422_1080p.yuv
source/common/xstream/media_codec/test/: CMakeLists.txt  gtest_main.cc  media_codec_test.cpp
source/common/xstream/methods/cnnmethod/: CMakeLists.txt
source/common/xstream/methods/cnnmethod_multistage/: CMakeLists.txt
source/common/xstream/python_api/: CMakeLists.txt  CMakeLists.txt.org
source/common/xstream/python_api/package/: README.md
source/common/xstream/vision_type/: CMakeLists.txt  README.md  doxygen.txt
source/solution_zoo/body/: CMakeLists.txt  main.cpp  method_factory.cpp
source/solution_zoo/body/configs/: age_gender.json  backbone_feature.json  behavior_detection.json  body_detection.json  body_solution.json  box_filter_config.json  box_filter_config_2M.json  box_filter_config_8M.json  dance_detection.json  dance_solution.json  face_mask.json  fall_det.json  gender_voting.json  gesture_det.json  gesture_voting.json  guesture_detection.json  guesture_multitask.json  guesture_multitask_12M.json  guesture_multitask_8M.json  guesture_solution.json  hand_lmk.json  iou2_method_param.json  iou_method_param.json  multitask_config.json  multitask_config_12M.json  multitask_config_8M.json  multitask_with_hand_12M.json  multitask_with_hand_2M.json  multitask_with_hand_8M.json  multitask_with_hand_without_kps_mask.json  multitask_with_hand_without_kps_mask_12M.json  multitask_with_hand_without_kps_mask_2M.json  multitask_with_hand_without_kps_mask_8M.json  multitask_with_hand_without_mask_12M.json  multitask_with_hand_without_mask_2M.json  multitask_with_hand_without_mask_8M.json  segmentation_multitask_12M.json  segmentation_multitask_2M.json  segmentation_multitask_8M.json  squat_behavior.json  (+14 more)
source/solution_zoo/face/: CMakeLists.txt  main.cpp  method_factory.cpp
source/solution_zoo/face/configs/: age_voting.json  face_pose_lmk.json  face_pose_lmk_8M.json  face_quality.json  face_recog.json  face_recog_solution.json  face_snapshot.json  face_solution.json  feature.json
source/solution_zoo/face_body_multisource/: CMakeLists.txt  README.md
source/solution_zoo/face_body_multisource/config/: body_detection.json  face_body_solution.json  face_snapshot.json  merge_head_body.json
source/solution_zoo/face_body_multisource/include/: util.h
source/solution_zoo/face_body_multisource/src/: main.cpp  solution_main.cpp
source/solution_zoo/face_body_multisource/test/: CMakeLists.txt  gtest_main.cc  test_api.cpp  test_solution.cpp
source/solution_zoo/tools/xwarehouse/: CMakeLists.txt  main.cpp
source/solution_zoo/video_box/: CMakeLists.txt
source/solution_zoo/video_box/configs/: backbone_feature.json  behavior_detection.json  behavior_solution.json  body_detection.json  body_solution.json  bpu_config.json  fall_det.json  mask.json  merge_head_body_behavior.json  mi_multitask.json  mi_multitask_12M.json  mi_multitask_8M.json  multitask_config_12M.json  raisehand_behavior.json  rtsp.json  vid.json  xbox_action_det.json  xbox_solution.json
source/solution_zoo/video_box/include/: votmodule.h
source/solution_zoo/video_box/src/: main.cpp  method_factory.cpp
(+1723 files in other folders)
